first level static_design complete

--- a/update_article.html
+++ b/update_article.html
@@ -92,11 +92,11 @@
                     <ol id="update_new">
                         <li>
                             <label for="cat_new">新大类：</label>
-                            <input name = "cat_new" type="text"></li>
+                            <input name = "cat_new" type="text">
                         </li>
                         <li>
                             <label for="subcat_new">新小类：</label>
-                            <input name = "subcat_new" type="text"></li>
+                            <input name = "subcat_new" type="text">
                         </li>
                     </ol>
                     <ol>
